--- a/myuser/templates/myuser/login.html
+++ b/myuser/templates/myuser/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load socialaccount %}
+
 {% block content %}
 <div class="container">
     <form method="post" action="">
@@ -14,7 +14,7 @@
         </div>
         <button type="submit" class="btn btn-success">Login</button> or 
         <a class="btn btn-info" href="{% url 'register' %}" role="button">Register</a> <hr>
-        <a href="{% provider_login_url 'google' %}" class="btn btn-danger" role="button" aria-pressed="true">Google</a>
+        <a href="" class="btn btn-danger" role="button" aria-pressed="true">Google</a>
     </form>
 </div>
 {% endblock %}
