--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,8 +15,13 @@
                 {% endif %}
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog-index' %}">
-                    Blog 
+                <a class="nav-link active" href="{% url 'blog-index' %}">
+                    Home 
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">
+                    Profile 
                 </a>
             </li>
         </ul>
